--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@tanstack/react-router-devtools": "^1.131.44",
     "@tanstack/router-vite-plugin": "^1.131.44",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
